--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,57 @@
 .App {
   text-align: center;
 }
+ 
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+html {
+  display:flex;
+  justify-content:center;
+  margin-top:3%;
+  background-color:rgb(245,245,245);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+#headerh3 {
+ display:flex;
+ justify-content: center;
+ font-family: Kristen ITC;
+ font-size:35px;
+}
+
+#displayAppId {
+    display:flex;
+    justify-content: center;
+    flex-direction:column
+}
+
+#mainDiv {
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction:column
+
 }
 
-.App-link {
-  color: #61dafb;
+
+form > label   {
+  font-weight:700;
+  font-family: Rockwell;
+  padding-bottom:0.5%;
+  padding-top:1%;
+  padding-left:0.5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  form input {
+  font-style:italic!important;
+  padding-left:1.5%;
+}
+
+
+#specLab {
+  flex-wrap: wrap;
+  background-color:rgb(224,224,224);
+  margin: 1.5% 0;
+}
+
+#specLab > label {
+  display:block;
 }
