--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,7 @@ html {
   padding:5%;
 }
 
-/*#bodyDiv {
-   margin-bottom:45%;
-}*/
+
 
 form > label   {
   font-weight:700;
@@ -55,6 +53,19 @@ input[type='checkbox'] {
 }
 
 
+input[type='radio'] {
+  margin-left:5px;
+}
+
+input[type='image'] {
+  margin-left:2%;
+}
+
+.btnDel {
+  background-color: hsla(0, 0%, 0%, 0);
+  border: 0px solid hsla(0, 0%, 0%, 0);
+  display:inline-block;
+}
 
 
 #specLab {
@@ -65,10 +76,31 @@ input[type='checkbox'] {
 
 #specLab > label {
   display:block;
-
 }
 
 
 .modalbtn {
   margin-top:5%;
 }
+
+
+h1 {
+  margin-top:5%;
+  padding-top:5%;
+}
+
+
+li  button {
+  margin-left:2%;
+}
+
+.lblradio {
+  margin-right:2%;
+}
+
+
+.btnOnUpdate {
+font-size:12px;
+}
+
+
